--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
+    "method-override": "^3.0.0",
     "mysql": "^2.17.1",
     "mysql2": "^1.7.0",
     "router": "^1.3.3"
